bunch of shortcuts
- shift + alt + right/left => move tab to other tabbed pane
- ctrl + right/left => jump to other tabbed pane
- alt + right/left => switch to next/prev tab
- alt + up/down => jump to prev/next uncovered line
- always focus file panels (TableForm), whenever switching to one
- tooltips with stats for vhdl lines + auto showing tooltips

--- a/src/ui/ApplicationForm.form
+++ b/src/ui/ApplicationForm.form
@@ -690,7 +690,7 @@
             </properties>
             <border type="none" title="File Viewer"/>
             <children>
-              <tabbedpane id="a3ff" binding="fileViewerTabbedPane1">
+              <tabbedpane id="a3ff" binding="fileViewerTabbedPane1" custom-create="true">
                 <constraints>
                   <splitpane position="left"/>
                 </constraints>
@@ -725,7 +725,7 @@
                   </grid>
                 </children>
               </tabbedpane>
-              <tabbedpane id="cf172" binding="fileViewerTabbedPane2">
+              <tabbedpane id="cf172" binding="fileViewerTabbedPane2" custom-create="true">
                 <constraints>
                   <splitpane position="right"/>
                 </constraints>
