--- a/src/ui/fileViewer/TableForm.form
+++ b/src/ui/fileViewer/TableForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.fileViewer.TableForm">
-  <grid id="27dc6" binding="mainPanel" default-binding="true" layout-manager="FormLayout">
+  <grid id="27dc6" binding="mainPanel" custom-create="true" default-binding="true" layout-manager="FormLayout">
     <rowspec value="center:max(d;4px):noGrow"/>
     <rowspec value="top:4dlu:noGrow"/>
     <rowspec value="fill:d:grow"/>
