--- a/src/ui/ApplicationForm.form
+++ b/src/ui/ApplicationForm.form
@@ -689,14 +689,14 @@
                               <text value="&amp;potential"/>
                             </properties>
                           </component>
-                          <component id="a336d" class="javax.swing.JCheckBox" binding="score1byratioCheckBox">
+                          <component id="a336d" class="javax.swing.JCheckBox" binding="scorebyratioCheckBox">
                             <constraints>
                               <grid row="8" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                               <forms/>
                             </constraints>
                             <properties>
                               <selected value="false"/>
-                              <text value="score1&amp;byratio"/>
+                              <text value="score&amp;byratio"/>
                             </properties>
                           </component>
                           <component id="d2960" class="javax.swing.JCheckBox" binding="optimizeCheckBox">
@@ -709,14 +709,14 @@
                               <text value="&amp;optimize"/>
                             </properties>
                           </component>
-                          <component id="a5c29" class="javax.swing.JCheckBox" binding="score1byfailedCheckBox">
+                          <component id="a5c29" class="javax.swing.JCheckBox" binding="scorebyfailedCheckBox">
                             <constraints>
                               <grid row="6" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                               <forms/>
                             </constraints>
                             <properties>
                               <selected value="false"/>
-                              <text value="s&amp;core1byfailed"/>
+                              <text value="s&amp;corebyfailed"/>
                             </properties>
                           </component>
                           <component id="192e7" class="javax.swing.JCheckBox" binding="diagnoseCheckBox">
